--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,6 +4,7 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  height: 100vh;
 }
 
 a {
@@ -23,4 +24,11 @@ a {
     color: white;
     background: black;
   }
+}
+.portrait {
+  background: url('/images/self-portrait.jpg') no-repeat center center;
+  background-size: contain;
+  height: 100vh;
+  text-align: center;
+  text-shadow: 0 2px 10px black;
 }
